--- a/TrickyAutomationTests.uplugin
+++ b/TrickyAutomationTests.uplugin
@@ -17,8 +17,8 @@
 	"Modules": [
 		{
 			"Name": "TrickyAutomationTests",
-			"Type": "Runtime",
-			"LoadingPhase": "Editor"
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Sealed": true,
